# RayTracer

./: CMakeLists.txt  README.md  cube.h  light.h  main.cc  material.h  triangle.h  vec3.h
